--- a/html/first.html
+++ b/html/first.html
@@ -8,7 +8,7 @@
 
 
 <html>
-<body  style="background-color:pink">
+<body  style="background-color:gray">
 <! bgcolor="yellow"  body页面背景色添加 ,后续被style替换！>
 
 <h1  style="background-color:orange;text-align:center" >My First Page!你好！</h1>
@@ -92,7 +92,7 @@ text-align 属性规定了元素中文本的水平对齐方式
 <p>
 <a href="#C4">查看 Chapter 4。</a>
 <br />
-<a href="#C17">查看 Chapter 17。</a>
+<a href="#C17">查看 Chapter 17</a>
 </p>
 
 <h2>Chapter 1</h2>
