--- a/html/first.html
+++ b/html/first.html
@@ -8,7 +8,7 @@
 
 
 <html>
-<body  style="background-color:gray">
+<body  style="background-color:pink">
 <! bgcolor="yellow"  body页面背景色添加 ,后续被style替换！>
 
 <h1  style="background-color:orange;text-align:center" >My First Page!你好！</h1>
@@ -58,7 +58,9 @@ hr增加标题线
  <br />
 <a href="http://www.baidu.com">百度</a>
  <br />
-
+ 
+ <a href="http://www.w3school.com.cn/html/html_quick.asp">html速查</a>
+ <br />
 
 <!br/关闭标签，回车？>
 
