20171111 for html5 study

--- a/html/first.html
+++ b/html/first.html
@@ -11,7 +11,7 @@
 <body  style="background-color:pink">
 <! bgcolor="yellow"  body页面背景色添加 ,后续被style替换！>
 
-<h1  style="background-color:orange;text-align:center" >My First Page!你好！</h1>
+<h1  style="background-color:orange;text-align:center" >My First Page!你好！彩虹</h1>
 <h6  style="text-align:center">2017年11月4日</h6>
 
 <hr />
@@ -25,17 +25,27 @@ hr增加标题线
 
 <!图片使用img语句
 假如某个 HTML 文件包含十个图像，那么为了正确显示这个页面，需要加载 11 个文件。加载图片是需要时间的，所以我们的建议是：慎用图片>
-<img src="bear.png" width="100" height="100" />
+<img src="rabit.png" width="200" height="200" />
 <img src="rabit.png" width="100" height="100" />
-<img src="coffee.png" width="100" height="100" />
-<img src="lemon.png" width="100" height="100" />
+<img src="rabit.png" width="100" height="100" />
+<img src="rabit.png" width="100" height="100" />
+<img src="coffee.png" width="200" height="200" />
+<img src="lemon.png" width="50" height="50" />
+<img src="lemon.png" width="50" height="50" />
 <img src="bear.png" width="100" height="100" />
+<img src="bear.png" width="200" height="200" />
+<br/>
+<img src="run.gif" width="200" height="100" />
+
+
+
 <img src="http://www.w3school.com.cn/i/w3school_logo_white.gif" />
 <p style="font-family:verdana;color:red;background-color:grey">
     春眠不觉晓，
       处处闻啼鸟。
         夜来风雨声，
           花落知多少。
+          ---杜牧 唐
 </p>
 
 <p style="font-family:times;color:green" > My first paragraph</p>
@@ -56,7 +66,7 @@ hr增加标题线
  <br />
 <a href="http://www.163.com">网易</a>
  <br />
-<a href="http://www.baidu.com">百度</a>
+<a href="http://www.163.com">百度2</a>
  <br />
  
  <a href="http://www.w3school.com.cn/html/html_quick.asp">html速查</a>
